[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "password-store"
version = "0.1.1"
description = "Password store wrapper library."
license = "MIT"
repository = "https://github.com/antoyo/password-store-rs"
documentation = "https://docs.rs/password-store/"

[dependencies]
chomp-nl = "^0.1.0"
