[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Password store wrapper library."
documentation = "https://docs.rs/password-store/"
license = "MIT"
name = "password-store"
repository = "https://github.com/antoyo/password-store-rs"
version = "0.1.3"
[dependencies]
json = "^0.11.13"
